# waypaper-rs

./: Cargo.toml  README.md
src/: app.rs  carousel.rs  changer.rs  cli.rs  common.rs  config.rs  main.rs  options.rs
src/app/: helpers.rs  input.rs  loading.rs  mod.rs  panels.rs  texture.rs  wallpaper.rs
src/app/panels/: bottom_panel.rs  image_grid.rs  mod.rs  options_popup.rs  top_panel.rs
