[package]
name = "waypaper-rs"
version = "0.1.0"
edition = "2021"
description = "GUI wallpaper setter for Wayland - Rust clone of waypaper"
license = "GPL-3.0"

[[bin]]
name = "waypaper-rs"
path = "src/main.rs"

[dependencies]
# GUI
eframe = { version = "0.29", features = ["default"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Image processing
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Config (INI format)
configparser = "3"

# XDG directories
dirs = "5"

# JSON for monitor list output
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Randomization
rand = "0.8"

# Directory walking
walkdir = "2"

# Native file dialog
rfd = "0.15"

[profile.release]
opt-level = 3
lto = true
